updated sdk version to 1.8, changed list to arraylist (potential errors)